--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,7 +1,7 @@
+@import './normalize';
 @import './typography';
 @import './text';
 @import './variables';
-@import './normalize';
-h1 {
-    color: aqua;
-}
+@import './containers';
+@import './texts';
+
