--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -77,3 +77,19 @@
     font-weight: 800;
     font-size: $font-size;
 }
+
+@font-face {
+    font-family: 'Montserrat Bold';
+    font-weight: 700;
+    font-style: normal;
+    src: local('Montserrat Bold'), local('Montserrat-Bold'),
+        url('../fonts/montserrat-v12-latin-700.woff2') format('woff2'),
+        url('../fonts/montserrat-v12-latin-700.woff') format('woff');
+}
+
+%monts-bold {
+    font-family: 'Montserrat Bold';
+    font-weight: 700;
+    font-style: normal;
+    font-size: 50px;
+}
