--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,3 +6,12 @@ $button-color: #ff6b08;
 $text-color-2: #ff6b08;
 $col-768: 44px;
 $gut-768: 20px;
+
+$color-text__light: #fff;
+$color-text__dark: #000;
+$color-text__dark-light: #222;
+$color-text__cyan: #00eaff;
+$color-text__gold: #f3ac2a;
+$color-text__pale: #5b606f;
+$color-btn: #ff6b08;
+$form-border: #717171;
