--- a/src/sass/components/_it-statistics.scss
+++ b/src/sass/components/_it-statistics.scss
@@ -62,6 +62,7 @@
         margin: 0;
         padding-left: $gutter;
         width: 700px;
+        box-shadow: -18px 18px 1px 2px hsla(0, 0%, 0%, 0.1), 0 15px 15px 15px hsla(0, 0%, 0%, 0.05);
     }
 }
 
