--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -3,6 +3,7 @@
 @import './variables';
 @import './components/career-consultation';
 @import './components/container';
+@import './components/header';
+@import './components/questions';
 @import './components/it-statistics';
 @import './components/own-way';
-@import './components/container-768';
