--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -7,3 +7,8 @@
 @import './components/questions';
 @import './components/it-statistics';
 @import './components/own-way';
+@import './components/award';
+@import './components/card-award';
+@import './components/partners-list';
+@import './components/tender';
+@import './components/footer';
